--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -162,8 +162,8 @@
 .my_new_afish .ap{
 	margin-left: 25px;
 	/*background: white;*/
-	width: 195px;
-	height: 270px;
+	/*width: 195px;
+	height: 270px;*/
 	/*display: none;*/
 }
 .kenta{
