--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -162,9 +162,12 @@
 .my_new_afish .ap{
 	margin-left: 25px;
 	/*background: white;*/
-	/*width: 195px;
-	height: 270px;*/
+	/width: 195px;
+	height: 270px;
 	/*display: none;*/
+}
+.my_new_afish .ap img{
+	height: 270px;
 }
 .kenta{
 	margin-top: 15px;
@@ -244,6 +247,9 @@
 	/*background: #bababa;*/
 	float: left;
 	/*display: none;*/
+}
+.ap_bl img{
+	height: 360px;
 }
 .ttl{
 	margin-bottom: 200px;
